# ros2learn

./: README.md  novel1.txt  novel2.txt  novel3.txt
chapt4_interfaces/: package.xml
chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
demo_cpp_pkg/: CMakeLists.txt  package.xml
demo_cpp_pkg/src/: cpp_node.cpp  learn_thread.cpp  person_node.cpp  turtle_circle.cpp  turtle_control.cpp
demo_cpp_service/: CMakeLists.txt  package.xml
demo_cpp_service/launch/: action.launch.py  demo.launch.py
demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
demo_cpp_tf/: CMakeLists.txt  package.xml
demo_cpp_tf/launch/: tf.launch.py
demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
demo_python_pkg/: package.xml  setup.py
demo_python_pkg/demo_python_pkg/: learn_thread.py  novel_pub_node.py  novel_sub_node.py  person_node.py  python_node.py  writer_node.py
demo_python_tf/: package.xml  setup.py
demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
status_display/: CMakeLists.txt  package.xml
status_display/src/: hello_qt.cpp  sys_status_display.cpp
status_interfaces/: package.xml
status_interfaces/msg/: SystemStatus.msg
status_publisher/: package.xml  setup.py
status_publisher/status_publisher/: sys_status_pub.py
